Infra/Terraform/AWS/EKS/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app-service
  namespace: sample-app
  labels:
    app: sample-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: sample-app
